# analisiPortafoglio

./: README.md  analysis.py  config.py  data.py  export.py  gateDefiniiton.md  howTo.md  lecture.ipynb  main.py  main_old.py  metrics.py  output.md  output.py  presets.md  pyproject.toml  requirements.txt  response.md  taxonomy.py  update_imports.py  workReport.md
docs/: ARCHITECTURE.md  AUDIT_MATH.md  COMPLEXITY_REPORT.md  MATH_STAT_CORRECTION_PLAN.md  PROJECT_STATUS.md
docs/howto/: README.md
output/: analysis_result.json  ml_structured_export_20260110_160251.json  ml_structured_export_20260111_113959.json  ml_structured_export_20260111_114221.json
output/data/: aggregated_holdings.json  analysis_result.json  data_quality.json  integration_test_results.json  ml_structured_export_20260129_215407.json  ml_structured_export_20260129_220059.json  ml_structured_export_20260129_220418.json  ml_structured_export_20260129_222716.json  ml_structured_export_20260129_223248.json  ml_structured_export_20260129_224030.json  ml_structured_export_20260129_225320.json  ml_structured_export_20260130_084633.json  ml_structured_export_20260130_085336.json  ml_structured_export_20260130_085541.json  ml_structured_export_20260130_090024.json  ml_structured_export_20260130_092028.json  ml_structured_export_20260130_092325.json  ml_structured_export_20260130_093858.json  ml_structured_export_20260130_094134.json  ml_structured_export_20260130_094236.json  ml_structured_export_20260130_095546.json  ml_structured_export_20260130_095802.json  ml_structured_export_20260130_100110.json  ml_structured_export_20260130_155822.json  ml_structured_export_20260130_161230.json  ml_structured_export_20260130_173445.json  ml_structured_export_20260130_175457.json  ml_structured_export_20260130_182256.json  ml_structured_export_20260130_182412.json  ml_structured_export_20260130_190721.json  ml_structured_export_20260130_211839.json  ml_structured_export_20260201_230144.json  ml_structured_export_20260201_230737.json  ml_structured_export_20260202_090017.json  ml_structured_export_20260202_091237.json  ml_structured_export_20260211_224235.json  ml_structured_export_20260212_123953.json  optimization_result.json  (+1 more)
reports/: README.md
scripts/: analyze_portfolio.py
tests/: __init__.py  conftest.py
(+154 files in other folders)
