[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-engine"
version = "2.1.0"
description = "Professional-grade portfolio analysis toolkit with institutional-quality metrics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Portfolio Analysis Team"}
]
keywords = [
    "portfolio", "finance", "investment", "analysis", 
    "sharpe", "metrics", "risk", "etf"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "yfinance>=0.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "python-dateutil>=2.8.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
analyze-portfolio = "portfolio_engine.core.main_legacy:main"

[project.urls]
Homepage = "https://github.com/portfolio-analysis/portfolio-engine"
Documentation = "https://github.com/portfolio-analysis/portfolio-engine#readme"
Repository = "https://github.com/portfolio-analysis/portfolio-engine"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"portfolio_engine.data.definitions" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
